# TexmexUploader

./: CMakeLists.txt  MANIFEST.in  README.md  package.xml  pixi.toml  pyproject.toml  setup.py
freecad/Texmex_Uploader/: common.py  config.py  config_storage.py  init_gui.py  library.py  model.py  modelimporter.py  modelviewer.py  svg.py
freecad/Texmex_Uploader/resources/translations/: README.md  Texmex_Uploader_es-ES.ts  update_translation.sh
