# References: 
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://packaging.python.org/en/latest/guides/packaging-namespace-packages/#native-namespace-packages
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad.Texmex_Uploader"
dynamic = ["version"]
description = "S3 ccloud Tools"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "Jorge Guadalupe Ventura Lopez", email = "mantenimiento@tmw.mx"},
]
requires-python = ">=3.8"
dependencies = ["minio"]

[project.urls]
source = "https://github.com/mttotmw/TexmexUploader"

[tool.setuptools]
packages = ["freecad", "freecad.Texmex_Uploader"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "freecad.Texmex_Uploader.version.__version__"}